# Copyright 2024 Koutheir Attouchi.
# See the "LICENSE.txt" file at the top-level directory of this distribution.
#
# Licensed under the MIT license. This file may not be copied, modified,
# or distributed except according to those terms.

[package]
name          = "dynamic-loader-cache"
version       = "0.1.1"                                                           # Remember to update `html_root_url`.
authors       = ["Koutheir Attouchi <koutheir@gmail.com>"]
license       = "MIT"
description   = "Reader of the dynamic loader shared libraries cache"
edition       = "2021"
documentation = "https://docs.rs/dynamic-loader-cache"
readme        = "README.md"
homepage      = "https://github.com/koutheir/dynamic-loader-cache"
repository    = "https://github.com/koutheir/dynamic-loader-cache"
categories    = ["caching", "database", "parser-implementations"]
keywords      = ["loader", "linker", "library", "ld-so-cache", "ld-elf-so-hints"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror         = { version = "1.0" }
memmap2           = { version = "0.9" }
memoffset         = { version = "0.9" }
arrayvec          = { version = "0.7" }
nom               = { version = "7.1" }
static_assertions = { version = "1.1" }

[dev-dependencies]
proptest       = { version = "1.4" }
assert_matches = { version = "1.5" }
